k8s/apps/renatotrack/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renatotrack
  labels:
    app.kubernetes.io/name: renatotrack
    app.kubernetes.io/part-of: renatotrack
