k8s/apps/renatotrack/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renatotrack
  namespace: renatotrack
  labels:
    app.kubernetes.io/name: renatotrack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: renatotrack
  ports:
    - name: http
      port: 3020        # porta do Service (mantida igual à da app, menos confusão)
      targetPort: http  # porta nomeada do container (3020)
      protocol: TCP
